--- a/TouchScreenBoard/TouchScreenBoard.csproj
+++ b/TouchScreenBoard/TouchScreenBoard.csproj
@@ -44,8 +44,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Keyboard\TouchScreenKeyboard.cs" />
+    <Compile Include="TouchScreenKeyboard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TouchScreenKeypad.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Themes\Generic.xaml">
